
Changes in version 1.1.7 (2022-03-30):

+ readSCEfromTXT: only read in last metal occurrence in .txt file name

Changes in version 1.1.8 (2022-04-03):

+ Adjusted read_cpout function to newest pipeline

Changes in version 1.1.9 (2022-04-19):

+ Bug fix: patchDetection now works on SpatialExperiment object
+ Fix for release

Changes in version 1.3.1 (2022-04-28):

+ Bug fix: avoid using factors in testInteraction function for group_by

Changes in version 1.3.2 (2022-05-30):

+ Bug fix: avoid duplication of metadata entries

Changes in version 1.3.3 (2022-06-03):

+ Bug fix: specify the number of nodes in patchDetection function

Changes in version 1.3.4 (2022-06-14):

+ Avoid duplicated columns when generating nodes for plotSpatial

Changes in version 1.3.5 (2022-06-15):

+ Added three spatial context functions

Changes in version 1.3.6 (2022-07-28):

+ new function to measure size of patch

Changes in version 1.3.7 (2022-08-11)

+ new function to measure minimal distances to cells of interest

Changes in version 1.3.8 (2022-10-13)

+ exclude a single validity check to to class changes in the ggraph package

Changes in version 1.3.9 (2022-10-14)

+ new function for spatial community detection

Changes in version 1.3.10 (2022-10-22)

+ fix axis.ratio to 1 in plotSpatial function and set scales = "fixed"

Changes in version 1.5.1 (2022-11-22)

+ fix axis.ratio to 1 in plotSpatial function and set scales = "fixed"

Changes in version 1.5.2 (2022-11-23)

+ Bug fix minDistToCells: return NA when all cells of an image belong to a patch

Changes in version 1.5.3 (2023-03-23)

+ Replaced merge function by left_join as safety measure

Changes in version 1.5.4 (2023-04-04)

+ Added option to get permutation counts returned from testInteractions

Changes in version 1.5.5 (2023-04-20)

+ Bug fix: in corner cases, levels of the permuted factors do not match the baseline.
+ Bug fix: testInteractions now works for cells that are not ordered by grouping level