@@ -38,7 +38,8 @@
 #'
 #' @return returns a \code{SpatialExperiment} or \code{SingleCellExperiment}
 #' containing the graph in form of a \code{SelfHits} object in
-#' \code{colPair(object, name)}.
+#' \code{colPair(object, name)}. The object is grouped by entries in the 
+#' \code{img_id} slot.
 #'
 #' @section Building an interaction graph:
 #' This function defines interacting cells in different ways. They are based
@@ -75,6 +76,13 @@
 #' \code{\link[BiocNeighbors]{BiocNeighborParam}}. Within the
 #' \code{BiocNeighborParam} object, \code{distance} can be set to
 #' \code{"Euclidean"} (default), \code{"Manhattan"} or \code{"Cosine"}.
+#' 
+#' @section Ordering of the output object
+#' The \code{buildSpatialGraph} function operates on individual images.
+#' Therefore the returned object is grouped by entries in \code{img_id}. 
+#' This means all cells of a given image are grouped together in the object.
+#' The ordering of cells within each individual image is the same as the ordering
+#' of these cells in the input object.
 #'
 #' @examples
 #' path <- system.file("extdata/mockData/steinbock", package = "imcRtools")
@@ -230,6 +238,8 @@ buildSpatialGraph <- function(object,
 
     metadata(cur_out) <- cur_meta
     int_metadata(cur_out) <- cur_intmeta
+    
+    message("The returned object is ordered by the '", img_id, "' entry.")
 
     return(cur_out)
 }
